@@ -25,6 +25,7 @@ ADD_LOVED_SONG_IN_LASTFM = Add as favorite in Last.fm
 ADD_LYRICS = Add lyrics
 ADD_RADIO = Add Radio
 ADD_PODCAST_FEED = Add Podcast Feed
+ADD_TO_ACTIVE_PLAYLIST_AFTER_CURRENT_AUDIO_OBJECT = Add to playlist after active song
 ADD_TO_PLAYLIST = Add to playlist
 ADD_TO_NEW_PLAYLIST = Add to new playlist
 ALBUM = Album
