@@ -25,6 +25,7 @@ ADD_LOVED_SONG_IN_LASTFM = Bei Last.fm als Lieblingslied hinzuf\u00FCgen
 ADD_LYRICS = Songtext hinzuf\u00FCgen
 ADD_RADIO = Radiosender hinzuf\u00FCgen
 ADD_PODCAST_FEED = Podcast abonnieren
+ADD_TO_ACTIVE_PLAYLIST_AFTER_CURRENT_AUDIO_OBJECT = Zur Wiedergabeliste nach aktivem Titel hinzuf\u00FCgen
 ADD_TO_PLAYLIST = Zur Wiedergabeliste hinzuf\u00FCgen
 ADD_TO_NEW_PLAYLIST = Zu neuer Wiedergabeliste hinzuf\u00FCgen
 ALBUM = Album
